# PlasmaAutoHDR

./: .gitignore  README.md  install.sh
autohdr-core/: CMakeLists.txt
autohdr-core/include/autohdr/: autohdr.h  config.h  display_limits.h  tone_curve.h  tone_curve_presets.h  tone_curve_user_presets.h  types.h
autohdr-core/src/: config.cpp  display_limits.cpp  tone_curve.cpp  tone_curve_presets.cpp  tone_curve_user_presets.cpp
autohdr-core/tests/: test_lut.cpp
autohdr-vk/: CMakeLists.txt
autohdr-vk/layer/: VkLayer_AUTOHDR.json
autohdr-vk/scripts/: install-layer.sh
autohdr-vk/shaders/: autohdr.frag  fullscreen.vert
autohdr-vk/src/: config_state.cpp  config_state.h  layer.cpp
decky-autohdr/: README.md  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  shared_config.py  tsconfig.json
decky-autohdr/py_modules/autohdr/: config_service.py  install_service.py
decky-autohdr/src/: index.tsx
kwin4-effect-autohdr/: CMakeLists.txt  autohdr.frag  autohdr_color.glsl  autohdr_config.cpp  autohdr_config.h  autohdr_effect.cpp  autohdr_effect.h  autohdr_qt_bridge.cpp  autohdr_qt_bridge.h  build-install.sh  check-plugin-version.sh  kwin4_effect_autohdr.shortcuts  metadata.json  plasma-autohdr-calibrate  tone_curve.cpp  tone_curve.h  tone_curve_presets.cpp  tone_curve_presets.h  tone_curve_user_presets.cpp  tone_curve_user_presets.h
kwin4-effect-autohdr/kcm/: CMakeLists.txt  autohdr_effect_kcm.cpp  kwin4_effect_autohdr_config.json  tone_curve_editor.cpp  tone_curve_editor.h
scripts/: test-steam-deck-integration.sh
